Added canRead, canUpdate etc. rights calls and fixed problem with portal_login getting clobbered on edit.

--- a/app/views/userEdit.scala.html
+++ b/app/views/userEdit.scala.html
@@ -20,6 +20,15 @@
 
                 <fieldset>
                     <legend></legend>
+
+                    <div class="control-group">
+                        <label class="control-label" for="portalLogin"></label>
+                        <div class="controls">
+                            <input type="text" name="portalLogin" id="portalLogin" class="input-xlarge" placeholder="@Messages("useredit.portalLogin")"  value="@form("portalLogin").value">
+                            <p class="help-block">@Messages("user.edit.portalLogin.help")</p>
+                        </div>
+                    </div>
+
                     <div class="control-group">
                         <label class="control-label" for="firstName"></label>
                         <div class="controls">
