--- a/app/views/menuBar.scala.html
+++ b/app/views/menuBar.scala.html
@@ -9,9 +9,15 @@
                 <li class="@{if(active == 'home) "active" else "inactive"}"><a href="@routes.MiscController.index()">@Messages("menu.home")</a></li>
                 <li class="@{if(active == 'showWorkoutLocations) "active" else "inactive"}"><a href="@routes.Report.showWorkoutLocations()">@Messages("menu.reports")</a></li>
              *@
-                <li class="@{if(active == 'admin) "active" else "inactive"}"><a href="@routes.MiscController.userList()">@Messages("menu.admin")</a></li>
+                <!-- CRUD Users -->
+                @if(rq.canRead(security.tgUser)) {
+                  <li class="@{if(active == 'admin) "active" else "inactive"}"><a href="@routes.MiscController.userList()">@Messages("menu.admin")</a></li>
+                }
+
+
              @*   <li class="@{if(active == 'account) "active" else "inactive"}"><a href="@routes.MiscController.userEdit">@Messages("menu.account")</a></li> *@
                 <li class="@{if(active == 'contact) "active" else "inactive"}"><a href="">@Messages("menu.contact")</a></li>
+
                 @if(rq.context.user.isDefined) {
                     <li class="@{if(active == 'logout) "active" else "inactive"}"><a href="@routes.AuthController.logout()">@Messages("menu.logout")</a></li>
                 } else {
