--- a/app/views/listWorkoutLocations.scala.html
+++ b/app/views/listWorkoutLocations.scala.html
@@ -50,10 +50,8 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
             *@
 
             @* If the user has no filter on their rights in the area show them the company list. *@
-            @* otherwise, filter on their company ID  *@
-            @if(rq.isFiltered(security.tgReportWorkoutLocations)) {
-                <input name="f" type="hidden" value="@rq.context.user.get.companyId" />
-            }  else {
+            @* otherwise, filter on their company ID in the controller  *@
+            @if(!rq.isFiltered(security.tgReportWorkoutLocations)) {
                 <div class="control-group">
                     <label class="control-label" for="input01">@Messages("workouts.location.field.company")</label>
                     <div class="controls">
